  * Work as others requests type but is only available to admin
- Fixes issue #10: Add a new route to query for users presence
  * route url is /pyvac/off
  * can be filtered by date (default today) /pyvac/off?date=20151224
  * can be filtered by name (can be partial) /pyvac/off?name=peter
  * can be filtered by nickame (LDAP uid field) (can be partial) /pyvac/off?nick=spiderman
- Fixes issue #12: Update buble count in header
  * Number of requests displayed in bubble in now only taking next requests not all requests
- Fixes UTC issue on calendar not displaying colors properly
- Request list view update:
  * PENDING requests are kept in the Future table until they've been accepted or denied
- Fixes zh holidays list for 2016:
  * The holiday dates are changed by the Taiwanese governement each October
    so we must override workalendar return list to use the correct ones.
- ZH users now use EN locales instead of FR

1.7
---

- Add new vacation type: Recovery
  * Work as others requests type but is excluded from export
- Add holiday feature:
  * Display holidays dates in calendar regarding user country
  * Theses dates cannot be selected
    - they will be substracted from requests when requesting a period including an holiday
    - requests will now have a duration of days equal to the real working dates
  * Holidays data retrieved from workalendar package
- Fixes issue #6: Request list view splitted:
  * Split the view in 2 tab: past and next requests splitted on current date
  * Conflicts are only computed for next requests to reduce the page load
  * Past requests tab have less columns: action, conflict and notified has been removed
- Fixes issue #9: Show user vacation in the home calendar
  * Add color code to calendar for:
    - pending/accepted_manager requests
    - approved_admin requests
  * Theses dates cannot be selected, so user cannot request multiple times the same period
- Fixes bug: conflicts were not working properly in non LDAP mode